--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 version: "3" ## especifica a versão do docker-compose file
 
 services: ## Define um serviço
-  node: ## nome do serviço
+  app: ## nome do serviço
+    container_name : 'node' ## nome do container
     build: . ## localização do dockerfile
     command: npm start ## comando a executar
     ports:
       - "3000:3000" ## redirecionamento de porta quando chegar alguma requisição na porta 3000 chama o container na porta 3000
     volumes:
       - .:/usr/app ## monitoro a pasta atual . e envio as alterações para /usr/app
+  db : 
+    container_name : 'mysql'
+    image: mysql:8.0.26
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    ports: 
+      - '3308:3306'
+    environment: 
+      - MYSQL_ROOT_PASSWORD=root
+      - TZ=America/Sao_Paulo
